WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257096
Network connection integrity policies are missing when connecting via <link rel=preconnect>
https://bugs.webkit.org/show_bug.cgi?id=257096
Summary
Network connection integrity policies are missing when connecting via <link r...
Wenson Hsieh
Reported
2023-05-20 16:55:09 PDT
rdar://107356544
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-05-20 17:04:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14151
EWS
Comment 2
2023-05-22 15:16:22 PDT
Committed
264382@main
(c2ec9c117673): <
https://commits.webkit.org/264382@main
> Reviewed commits have been landed. Closing PR #14151 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug