Tools/TestWebKitAPI/cocoa/HTTPServer.h
@@ -96,6 +96,7 @@ public:
     NSURLRequest *request(StringView path = "/"_s) const;
     NSURLRequest *requestWithLocalhost(StringView path = "/"_s) const;
     WKWebViewConfiguration *httpsProxyConfiguration() const;
+    size_t totalConnections() const;
     size_t totalRequests() const;
     void cancel();
     void terminateAllConnections(CompletionHandler<void()>&&);
